# dmcli

./: .gitignore  .gitlab-ci.yml  .sample.env  Makefile  README.md  main.py  pyproject.toml  requirements.txt
data/players/: grendor_herlsson.yaml
dmcli/: character.py  command.py  generators.py  pipeline.py  render.py  roll.py  session.py  special_types.py  utils.py
dmcli/worldbuilding/: business.py  location.py
src/: command.py  utils.py
tests/: test_character.py  test_command.py  test_utils.py
