[tool.poetry]
name = "dmcli"
version = "0.1.0"
description = ""
authors = ["Jonathan Law <jonathan.law@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.8.0"
shortuuid = "^1.0.13"
prompt-tool-kit = "^1.0.14"
PyYAML = "^6.0.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
